Use JS to initialize grid
- Write JS
- Remove hand-written HTML cells

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 </head>
 <body>
     <h1>grid draw</h1>
-    <div id="drawing-area">
-        <div style="grid-column: 1; grid-row: 1"></div>
-        <div style="grid-column: 1; grid-row: 2"></div>
-        <div style="grid-column: 2; grid-row: 1"></div>
-        <div style="grid-column: 2; grid-row: 2"></div>
-    </div> 
+    <div id="drawing-area"></div>
 </body>
 </html>
