--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>grid draw</h1>
+    <div id="control-bar">
+        <label for="">grid size</label>
+        <input type="number" id="grid-size" name="grid-size">
+        <button id="clear">clear</button>
+    </div>
     <div id="drawing-area"></div>
 </body>
 </html>
