--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>grid draw</h1>
     <div id="control-bar">
         <label for="">grid size</label>
-        <input type="number" id="grid-size" name="grid-size">
+        <input type="number" id="grid-size" name="grid-size" size="3">
         <button id="clear">clear</button>
     </div>
     <div id="drawing-area"></div>
